# FlowShield_UDRL

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
archive/debug_scripts/: analyze_shield.py  audit_project.py  check_models.py  create_improved_shield.py  debug_shield.py  quick_update_shield.py
archive/old_results/old_metrics/: comparison_results.json
configs/: base.yaml  highway.yaml
configs/shield/: diffusion.yaml  quantile.yaml
docs/: Makefile  RAPPORT_COMPLET.md  best_practices.rst  bibliography.rst  conf.py  index.rst  quickstart.rst  requirements.txt  usage.rst
docs/api/: envs.rst  evaluation.rst  index.rst
docs/concepts/: index.rst  ood_problem.rst  udrl.rst
docs/environments/: highway.rst  index.rst  lunarlander.rst
docs/experiments/: ablations.rst  index.rst  results.rst  visualizations.rst
docs/methods/: diffusion.rst  flow_matching.rst
flowshield-udrl/: .readthedocs.yaml  Makefile  README.md  pytest.ini  setup.py
flowshield-udrl/archive/debug_scripts/: audit_sphinx.py
flowshield-udrl/configs/: __init__.py  d4rl.yaml  lunarlander.yaml
flowshield-udrl/configs/shield/: flow_matching.yaml
flowshield-udrl/docs/: conf.py  faq.rst  index.rst  installation.rst
flowshield-udrl/docs/_static/: custom.css
flowshield-udrl/docs/api/: models.rst  training.rst
flowshield-udrl/docs/concepts/: safety_shields.rst
flowshield-udrl/docs/environments/: overview.rst
flowshield-udrl/docs/experiments/: protocol.rst
flowshield-udrl/docs/methods/: index.rst  quantile.rst
flowshield-udrl/notebooks/: 03_shield_comparison.ipynb
flowshield-udrl/scripts/: complete_evaluation.py  create_4panel_gifs.py  demo_shield_crash.py  expert_evaluation.py  logger.py  train_diffusion.py  train_flow.py  train_policy.py  train_robust_system.py  visualize_with_shield.py
flowshield-udrl/src/: robust_shield_system.py
flowshield-udrl/src/data/: dataset.py  trajectory.py
flowshield-udrl/src/envs/: factory.py
flowshield-udrl/src/evaluation/: __init__.py  evaluator.py  metrics.py
flowshield-udrl/src/models/agent/: __init__.py
flowshield-udrl/src/models/components/: __init__.py  attention.py  mlp.py
flowshield-udrl/src/models/safety/: __init__.py  projector.py
flowshield-udrl/src/training/: __init__.py  train_agent.py  trainer.py
flowshield-udrl/src/utils/: config.py
flowshield-udrl/tests/: __init__.py  test_flow_matching.py
notebooks/: 01_quick_start.ipynb  02_flow_matching_deep_dive.ipynb
results/final/tables/: evaluation_results.csv  summary_table.md
results/lunarlander/: RESULTS.md
results/robust/: test_results.json
scripts/: advanced_analysis.py  collect_expert_data.py  create_comparison_gifs.py  create_ppo_comparison.py  evaluate_models.py  models.py  run_experiments.py  train_quantile.py  visualize_episodes.py
src/: __init__.py
src/data/: __init__.py  collectors.py
src/envs/: __init__.py  continuous_wrappers.py  wrappers.py
src/evaluation/: lunarlander_metrics.py  visualization.py
src/models/: __init__.py
src/models/agent/: udrl_policy.py
src/models/components/: embeddings.py
src/models/safety/: base.py  flow_matching.py  quantile.py  shields.py
src/training/: train_safety.py
src/utils/: __init__.py  io.py  logging.py  seed.py
tests/: test_data.py  test_models.py
